--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,5 +28,12 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
+  <!-- Mailchimp -->
+  <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+  <style type="text/css">
+    #mc_embed_signup{background:#000000; clear:left; font:14px Helvetica,Arial,sans-serif; width:600px; }
+    
+  </style>
+  
   <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/fbbddb2990b2fab3d0435a825/d7455f6b7de6dbfb09e18b7a6.js");</script>
 </head>
