--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,67 +1,36 @@
 <div class="sidebar">
-    <div class="container sidebar-sticky">
-        <div class="sidebar-about">
-            <h1>
-                <a href="/{{ site.baseurl }}">
-                    {{ site.title }}
-                </a>
-            </h1>
-            <p class="lead">{{ site.description }}</p>
-        </div>
+  <div class="container sidebar-sticky">
+    <div class="sidebar-about">
+      <h1>
+        <a href="/{{ site.baseurl }}"><img id="logo" src="/public/images/fealty_logo.png" alt="Game logo"></a>
+        </a>
+      </h1>
 
-        <!-- Begin Mailchimp Signup Form -->
-        <div id="mc_embed_signup">
-            <form action="https://fealtygame.us7.list-manage.com/subscribe/post?u=fbbddb2990b2fab3d0435a825&amp;id=06ce5fc35c"
-                  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                  target="_blank" novalidate>
-                <div id="mc_embed_signup_scroll">
-                    <div>
-                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-
-                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                            <input type="text" name="b_fbbddb2990b2fab3d0435a825_06ce5fc35c" tabindex="-1" value="">
-                        </div>
-
-                        <div class="clear">
-                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button-link">
-                        </div>
-                    </div>
-
-                </div>
-            </form>
-        </div>
-
-        <!--End mc_embed_signup-->
-
-        <nav class="sidebar-nav">
-            <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/{{ site.baseurl }}">Home</a>
-
-            {% comment %}
-            The code below dynamically generates a sidebar nav of pages with
-            `layout: page` in the front-matter. See readme for usage.
-            {% endcomment %}
-
-            {% assign pages_list = site.pages %}
-            {% for node in pages_list %}
-            {% if node.title != null %}
-            {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
-               href="/{{ site.baseurl }}{{ node.url  | remove_first: '/' }}">{{ node.title }}</a>
-            {% endif %}
-            {% endif %}
-            {% endfor %}
-
-            <hr>
-            <span class="sidebar-nav-item"><a href="https://discord.gg/rFTHUmf">Join the Official Discord!</a></span>
-            <span class="sidebar-nav-item">Game v{{ site.gameVersion }}</span>
-            <span class="sidebar-nav-item">Site v{{ site.version }}</span>
-        </nav>
-
-        <div>
-
-        </div>
-
-        <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+      <p class="lead">{{ site.description }}</p>
     </div>
+          <div id="pledgelink">
+      <a href="/pledge.html"><h1>Sign up for the demo!</h1></a>
+  </div>
+    <nav class="sidebar-nav">
+      {% comment %}
+        The code below dynamically generates a sidebar nav of pages with
+        `layout: page` in the front-matter. See readme for usage.
+      {% endcomment %}
+
+      {% assign pages_list = site.pages %}
+      {% for node in pages_list %}
+        {% if node.title != null %}
+          {% if node.layout == "page" %}
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="/{{ site.baseurl }}{{ node.url  | remove_first: '/' }}">{{ node.title }}</a>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
+      
+      <hr>
+                  <span class="sidebar-nav-item"><a href="https://discord.gg/rFTHUmf">Join the Official Discord!</a></span>
+                  <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Follow us on Twitter!</a></span>
+    </nav>
+
+    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+  </div>
 </div>
