comment out discord link

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
       {% endfor %}
       
       <hr>
-                  <span class="sidebar-nav-item"><a href="https://discord.gg/rFTHUmf">Join the Official Discord!</a></span>
+                  <!-- <span class="sidebar-nav-item"><a href="https://discord.gg/rFTHUmf">Join the Official Discord!</a></span> -->
                   <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Follow us on Twitter!</a></span>
     </nav>
 
