--- a/public/css/fealty.css
+++ b/public/css/fealty.css
@@ -5,8 +5,38 @@
 }
 
 .center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+  }
 
+.post-image {
+	border: 5px solid darkslategrey;
 }
+
+.accordion {
+	background-color: #eee;
+	color: #444;
+	cursor: pointer;
+	padding: 18px;
+	width: 100%;
+	border: none;
+	text-align: left;
+	outline: none;
+	font-size: 15px;
+	transition: 0.4s;
+  }
+  
+  .active, .accordion:hover {
+	background-color: #ccc; 
+  }
+  
+  .panel {
+	padding: 0 18px;
+	display: none;
+	background-color: white;
+	overflow: hidden;
+  }
 
 /* General button style (reset) */
 .btn {
