--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,27 +8,30 @@
 
       <p class="lead">{{ site.description }}</p>
     </div>
-          <div id="pledgelink">
-      <a href="/pledge.html"><h1>Sign up for the demo!</h1></a>
-  </div>
+    <div id="pledgelink">
+      <a href="/pledge.html">
+        <h1>Sign up for the demo!</h1>
+      </a>
+    </div>
     <nav class="sidebar-nav">
       {% comment %}
-        The code below dynamically generates a sidebar nav of pages with
-        `layout: page` in the front-matter. See readme for usage.
+      The code below dynamically generates a sidebar nav of pages with
+      `layout: page` in the front-matter. See readme for usage.
       {% endcomment %}
 
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
-        {% if node.title != null %}
-          {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="/{{ site.baseurl }}{{ node.url  | remove_first: '/' }}">{{ node.title }}</a>
-          {% endif %}
-        {% endif %}
+      {% if node.title != null %}
+      {% if node.layout == "page" %}
+      <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
+        href="/{{ site.baseurl }}{{ node.url  | remove_first: '/' }}">{{ node.title }}</a>
+      {% endif %}
+      {% endif %}
       {% endfor %}
-      
+
       <hr>
-                  <!-- <span class="sidebar-nav-item"><a href="https://discord.gg/rFTHUmf">Join the Official Discord!</a></span> -->
-                  <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Follow us on Twitter!</a></span>
+      <!-- <span class="sidebar-nav-item"><a href="https://discord.gg/rFTHUmf">Join the Official Discord!</a></span> -->
+      <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Follow us on Twitter!</a></span>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
