--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KMST3DM" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  {% include sidebar.html %}
 
-    {% include sidebar.html %}
-    
-    <div class="content container">
-      {{ content }}
-    </div>
+  <div class="content container">
+    {{ content }}
+  </div>
 
 
-  </body>
+</body>
+
 </html>
