change: Better google analytics implementation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
 
 <body>
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KMST3DM" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KMST3DM" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript> -->
   <!-- End Google Tag Manager (noscript) -->
   {% include sidebar.html %}
 
