Replace demo sign up link with new form

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,8 +9,8 @@
       <p class="lead">{{ site.description }}</p>
     </div>
     <div id="pledgelink">
-      <a href="/pledge.html">
-        <h1>Sign up for the demo!</h1>
+      <a href="https://fealtygame.us7.list-manage.com/subscribe?u=fbbddb2990b2fab3d0435a825&id=06ce5fc35c">
+        <h1>Sign up to get notified about releases!</h1>
       </a>
     </div>
     <nav class="sidebar-nav">
