Updated link to new audience

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
       <p class="lead">{{ site.description }}</p>
     </div>
     <div id="pledgelink">
-      <a href="https://fealtygame.us7.list-manage.com/subscribe?u=fbbddb2990b2fab3d0435a825&id=06ce5fc35c">
+      <a href="http://eepurl.com/go8jWf">
         <h1>Sign up to get notified about releases!</h1>
       </a>
     </div>
