--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144"
     href="{{ site.baseurl }}public/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="{{ site.baseurl }}public/images/fealty_icon.png">
+  <link rel="shortcut icon" href="{{ site.url }}/public/images/fealty_icon.png">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
