--- a/public/css/fealty.css
+++ b/public/css/fealty.css
@@ -4,6 +4,15 @@
   margin-right: auto;
 }
 
+.image-left {
+  display: block;
+  margin-left: auto;
+	margin-right: 25px;
+	margin-bottom: 50px;
+  float: left;
+ 
+}
+
 .portrait{
 	width: 100px;
 	height: 100px;
