--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,7 +14,8 @@
       </a>
     </div>
       <!-- <span class="sidebar-nav-item"><a href="https://discord.gg/rFTHUmf">Join the Official Discord!</a></span> -->
-      <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Follow us on Twitter!</a></span>
+      <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Twitter!</a></span>
+      <span class="sidebar-nav-item"><a href="https://www.instagram.com/fealtydev/">Insta!</a></span>
 
     <nav class="sidebar-nav">
       {% comment %}
