Improved navigation and Alpha 1.1 changelog

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,14 +10,19 @@
     </div>
     <div id="pledgelink">
       <a href="http://eepurl.com/go8jWf">
-        <h1>Join the Alpha playtest!</h1>
-      </a>
+        <h2>> Join the playtest list < </h2> </a> </div> <div>
+            <h3>Downloads</h3>
+            <span class="sidebar-nav-item"><a
+                href="https://developer.cloud.unity3d.com/share/share.html?shareId=-kphyPWNsV">[
+                ANDROID ]</a></span>
+            <span class="sidebar-nav-item"><a
+                href="https://developer.cloud.unity3d.com/share/share.html?shareId=ZkQesS-Ns4">[
+                PC ]</a></span>
     </div>
-      <!-- <span class="sidebar-nav-item"><a href="https://discord.gg/rFTHUmf">Join the Official Discord!</a></span> -->
-      <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Twitter!</a></span>
-      <span class="sidebar-nav-item"><a href="https://www.instagram.com/fealtydev/">Insta!</a></span>
 
+    <h3>Pages</h3>
     <nav class="sidebar-nav">
+      <a href="/{{ site.baseurl }}">Home</a>
       {% comment %}
       The code below dynamically generates a sidebar nav of pages with
       `layout: page` in the front-matter. See readme for usage.
@@ -33,6 +38,13 @@
       {% endif %}
       {% endfor %}
     </nav>
+
+    <div>
+      <h3>Contact</h3>
+      <!-- <span class="sidebar-nav-item"><a href="https://discord.gg/rFTHUmf">Join the Official Discord!</a></span> -->
+      <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Twitter</a></span>
+      <span class="sidebar-nav-item"><a href="https://www.instagram.com/fealtydev/">Instagram</a></span>
+    </div>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
