--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -42,6 +42,7 @@
     <div>
       <h3>Contact</h3>
       <!-- <span class="sidebar-nav-item"><a href="https://discord.gg/rFTHUmf">Join the Official Discord!</a></span> -->
+      <span class="obfuscate"><a href="mailto:fealtydev">moc.liamg@vedytlaef</a></span>
       <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Twitter</a></span>
       <span class="sidebar-nav-item"><a href="https://www.instagram.com/fealtydev/">Instagram</a></span>
     </div>
