--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,8 +15,7 @@
 
             <span class="sidebar-nav-item"><a
                 href="https://developer.cloud.unity3d.com/share/share.html?shareId=WJxUJGodo4">[ PC ]</a></span>
-            <span class="sidebar-nav-item"><a href="install.appcenter.ms/users/fealtydev-gmail.com/apps/fealty/distribution_groups/public%20link
-                ">[ ANDROID ]</a></span>
+            <span class="sidebar-nav-item"><a href="install.appcenter.ms/users/fealtydev-gmail.com/apps/fealty/distribution_groups/public%20link">[ ANDROID ]</a></span>
             <span class="sidebar-nav-item"><a
                 href="install.appcenter.ms/users/fealtydev-gmail.com/apps/fealty-1/distribution_groups/public%20link">[
                 iOS ]</a></span>
