Update wiki entry layout - fancy Liquid stuff

--- a/public/css/fealty.css
+++ b/public/css/fealty.css
@@ -1,3 +1,11 @@
+ul.horz > li {
+	display: inline-block;
+	/* You can also add some margins here to make it look prettier */
+	zoom:1;
+	*display:inline;
+	/* this fix is needed for IE7- */
+}
+
 .smaller-text {font-size: 80%; }
 
 .smallest-text {font-size: 65%; }
