--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
     </div>
     <div id="pledgelink">
       <a href="http://eepurl.com/go8jWf">
-        <h2>> Join the playtest list <</h2> </a> </div> <div>
+        <h2>> Join the playtest list </h2> </a> </div> <div>
             <h3>Downloads</h3>
 
             <span class="sidebar-nav-item"><a
