Add Discord link to bottom of post template, and css for discord logo

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,10 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
+<p><i>Do you like what you read? Do you have questions or feedback?</i></p>
+  <p>
+    <a href="https://discord.gg/dKJP7bY"><img class="discord-logo" style="vertical-align:middle" src="https://pbs.twimg.com/media/DCEe9aPXYAA4joh.png"> </a>      
+    <i>Join our <a href="https://discord.gg/dKJP7bY">Discord </a> to share with us directly and use the in-game report button</i></p>
 </div>
 
 <div class="related">
