--- a/public/css/fealty.css
+++ b/public/css/fealty.css
@@ -32,6 +32,16 @@ ul.horz > li {
 	height: 100px;
 }
 
+.discord-logo{
+	width: 64px;
+	height: 64px;
+	display: block;
+	/* margin-left: auto; */
+	margin-right: 25px;
+	/* margin-bottom:auto; */
+	float: left;
+}
+
 .center {
 	display: block;
 	margin-left: auto;
