--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,37 +10,40 @@
     </div>
     <div id="pledgelink">
       <a href="http://eepurl.com/go8jWf">
-        <h2> > SUBSCRIBE < </h2> </a> </div>
-            
+        <h2> SUBSCRIBE! </h2> 
+      </a> 
+    </div> 
+      <h3>Pages</h3>
+          <nav class="sidebar-nav">              
+            <a class="sidebar-nav-item" href="/{{ site.baseurl }}">Home</a>                          
+            {% comment %}
+            The code below dynamically generates a sidebar nav of pages with
+            `layout: page` in the front-matter. See readme for usage.
+            {% endcomment %}
 
-    <h3>Pages</h3>
-    <nav class="sidebar-nav">
-      <a href="/{{ site.baseurl }}">Home</a>
-      {% comment %}
-      The code below dynamically generates a sidebar nav of pages with
-      `layout: page` in the front-matter. See readme for usage.
-      {% endcomment %}
+            {% assign pages_list = site.pages %}
+            {% for node in pages_list %}
+            {% if node.title != null %}
+            {% if node.layout == "page" %}
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
+              href="/{{ site.baseurl }}{{ node.url  | remove_first: '/' }}">{{ node.title }}</a>
+            {% endif %}
+            {% endif %}
+            {% endfor %}              
+          </nav>
 
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
-      {% if node.title != null %}
-      {% if node.layout == "page" %}
-      <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
-        href="/{{ site.baseurl }}{{ node.url  | remove_first: '/' }}">{{ node.title }}</a>
-      {% endif %}
-      {% endif %}
-      {% endfor %}
-    </nav>
+          <div>
+            <h3>External</h3>           
+            <span class="sidebar-nav-item"><a href="https://trello.com/b/GmwwhEYS/production">Roadmap</a></span>
+          </div>
 
-    <div>
-      <h3>Contact</h3>
-      <!-- <span class="sidebar-nav-item"><a href="https://discord.gg/rFTHUmf">Join the Official Discord!</a></span> -->      
-      <span class="sidebar-nav-item"><a href="https://discord.gg/dKJP7bY">Discord</a></span>
-      <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Twitter</a></span>
-      <span class="sidebar-nav-item"><a href="https://www.instagram.com/fealtydev/">Instagram</a></span>
-      <span class="obfuscate"><a href="mailto:fealtydev">moc.liamg@vedytlaef</a></span>      
+          <div>
+            <h3>Contact</h3>            
+            <span class="sidebar-nav-item"><a href="https://discord.gg/dKJP7bY">Discord</a></span>
+            <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Twitter</a></span>
+            <span class="sidebar-nav-item"><a href="https://www.instagram.com/fealtydev/">Instagram</a></span>
+            <span class="obfuscate"><a href="mailto:fealtydev">moc.liamg@vedytlaef</a></span>
+          </div>
+          <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
     </div>
-
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
-</div>
