devblog-1 and logos

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,10 +10,10 @@
     </div>
     <div id="pledgelink">
       <a href="http://eepurl.com/go8jWf">
-        <h2> SUBSCRIBE! </h2> 
+        <h2> > Join the mailing list < </h2> 
       </a> 
     </div> 
-      <h3>Pages</h3>
+      <h3><u>PAGES</u></h3>
           <nav class="sidebar-nav">              
             <a class="sidebar-nav-item" href="/{{ site.baseurl }}">Home</a>                          
             {% comment %}
@@ -33,12 +33,12 @@
           </nav>
 
           <div>
-            <h3>External</h3>           
+            <h3><u>ROADMAP</u></h3>           
             <span class="sidebar-nav-item"><a href="https://trello.com/b/GmwwhEYS/production">Roadmap</a></span>
           </div>
 
           <div>
-            <h3>Contact</h3>            
+            <h3><u>CONTACT</u></h3>            
             <span class="sidebar-nav-item"><a href="https://discord.gg/dKJP7bY">Discord</a></span>
             <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Twitter</a></span>
             <span class="sidebar-nav-item"><a href="https://www.instagram.com/fealtydev/">Instagram</a></span>
