--- a/public/css/fealty.css
+++ b/public/css/fealty.css
@@ -32,7 +32,30 @@ ul.horz > li {
 	height: 100px;
 }
 
+#main
+{
+	position:relative;
+	width:200px;
+}
+
+.floatdiv
+{
+	float:left;
+	width: 80px;
+}
+
 .discord-logo{
+	width: 64px;
+	height: 64px;
+	display: block;
+	/* margin-left: auto; */
+	margin-right: 25px;
+	/* margin-bottom:auto; */
+	float: left;
+}
+
+
+.twitter-logo{
 	width: 64px;
 	height: 64px;
 	display: block;
