--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,12 +16,23 @@ layout: default
         src="{{ site.baseurl }}/public/images/logos/twitter-logo.png"></a>
   </div>
   <div class="floatdiv">
-    <a target="new" href="https://discord.gg/dKJP7bY"
-      data-tooltip="Share on Twitter"><img class="discord-logo" style="vertical-align:middle"
-        src="{{ site.baseurl }}/public/images/logos/discord-logo.png"></a>
+    <a target="new" href="https://discord.gg/dKJP7bY" data-tooltip="Share on Twitter"><img class="discord-logo"
+        style="vertical-align:middle" src="{{ site.baseurl }}/public/images/logos/discord-logo.png"></a>
   </div>
 </div>
-</div>
+
+<div id="disqus_thread"></div>
+<script>
+var disqus_developer = 1; // Comment out when the site is live
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://fealtygame.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
 <div class="related">
   <h2>Related Posts</h2>
