task to implement disqus and move fealtydev signature to post template

--- a/public/css/fealty.css
+++ b/public/css/fealty.css
@@ -30,6 +30,7 @@ ul.horz > li {
 .portrait{
 	width: 100px;
 	height: 100px;
+	float:left;
 }
 
 #main
@@ -49,6 +50,7 @@ ul.horz > li {
 	height: 64px;
 	display: block;
 	/* margin-left: auto; */
+	margin-left: 50px;
 	margin-right: 25px;
 	/* margin-bottom:auto; */
 	float: left;
