--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,29 +1,22 @@
 ---
-layout: default
+layout: page
 ---
 
 <div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
-</div>
-<i>Do you like what you read? Do you have questions or feedback?</i>
+  -FealtyDev
 
-<div id="social-medial-buttons">
-  <div class="floatdiv">
-    <a target="new" href="https://twitter.com/intent/tweet?text=FealtyDev wrote things"
-      data-tooltip="Share on Twitter"><img class="twitter-logo" style="vertical-align:middle"
-        src="{{ site.baseurl }}/public/images/logos/twitter-logo.png"></a>
-  </div>
-  <div class="floatdiv">
-    <a target="new" href="https://discord.gg/dKJP7bY" data-tooltip="Share on Twitter"><img class="discord-logo"
-        style="vertical-align:middle" src="{{ site.baseurl }}/public/images/logos/discord-logo.png"></a>
-  </div>
+  <div>
+  <img class="portrait" src="{{ site.baseurl }}/public/images/fealtydevportrait.jpeg">
+  <a target="new" href="https://discord.gg/dKJP7bY" data-tooltip="Discord Invite"><img class="discord-logo" src="{{ site.baseurl }}/public/images/logos/discord-logo-white.png"><i>Chat with me on Discord</i></a>
 </div>
 
+</div>
+{% if page.comments %}
 <div id="disqus_thread"></div>
 <script>
-var disqus_developer = 1; // Comment out when the site is live
+// var disqus_developer = 1; // Comment out when the site is live
 
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
@@ -33,7 +26,7 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
+{% endif %}
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
