--- a/public/css/fealty.css
+++ b/public/css/fealty.css
@@ -33,10 +33,21 @@ ul.horz > li {
 }
 
 
+.cta-discord{
+	/* width: 64px; */
+	height: 64px;
+	display: block;
+	/* margin-left: auto; */
+	margin-left: 100px;
+	margin-right: 25px;
+	/* margin-bottom:auto; */
+	float: left;
+}
+
 .portrait{
 	width: 100px;
 	height: 100px;
-	float:left;
+	/* float:left; */
 }
 
 #main
