--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,42 +8,42 @@
 
       <p class="lead">{{ site.description }}</p>
     </div>
-    <div id="pledgelink">
+    <!-- <div id="pledgelink">
       <a href="http://eepurl.com/go8jWf">
         <h2> > Join the mailing list < </h2> 
       </a> 
-    </div> 
-      <h3><u>PAGES</u></h3>
-          <nav class="sidebar-nav">              
-            <a class="sidebar-nav-item" href="/{{ site.baseurl }}">Home</a>                          
-            {% comment %}
-            The code below dynamically generates a sidebar nav of pages with
-            `layout: page` in the front-matter. See readme for usage.
-            {% endcomment %}
+    </div>  -->
+    <nav class="sidebar-nav">
+      <a class="sidebar-nav-item" href="/{{ site.baseurl }}">Home</a>
+      {% comment %}
+      The code below dynamically generates a sidebar nav of pages with
+      `layout: page` in the front-matter. See readme for usage.
+      {% endcomment %}
 
-            {% assign pages_list = site.pages %}
-            {% for node in pages_list %}
-            {% if node.title != null %}
-            {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
-              href="/{{ site.baseurl }}{{ node.url  | remove_first: '/' }}">{{ node.title }}</a>
-            {% endif %}
-            {% endif %}
-            {% endfor %}              
-          </nav>
+      {% assign pages_list = site.pages %}
+      {% for node in pages_list %}
+      {% if node.title != null %}
+      {% if node.layout == "page" %}
+      <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
+        href="/{{ site.baseurl }}{{ node.url  | remove_first: '/' }}">{{ node.title }}</a>
+      {% endif %}
+      {% endif %}
+      {% endfor %}
+    </nav>
 
-          <div>
-            <h3><u>ROADMAP</u></h3>           
-            <span class="sidebar-nav-item"><a href="https://trello.com/b/GmwwhEYS/production">Roadmap</a></span>
-          </div>
-
-          <div>
-            <h3><u>CONTACT</u></h3>            
-            <span class="sidebar-nav-item"><a href="https://discord.gg/dKJP7bY">Discord</a></span>
-            <span class="sidebar-nav-item"><a href="https://twitter.com/FealtyDev">Twitter</a></span>
-            <span class="sidebar-nav-item"><a href="https://www.instagram.com/fealtydev/">Instagram</a></span>
-            <span class="obfuscate"><a href="mailto:fealtydev">moc.liamg@vedytlaef</a></span>
-          </div>
-          <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <div>
+      <span class="sidebar-nav-item">> <a href="https://trello.com/b/GmwwhEYS/production"> Roadmap</a></span>
+      <span class="sidebar-nav-item">> <a href="https://discord.gg/dKJP7bY"> Discord</a></span>
     </div>
+    </br>
+    <div>
+      <span class="sidebar-nav-item">> <a href="https://twitter.com/FealtyDev"> Twitter</a></span>
+      <span class="sidebar-nav-item">> <a href="https://www.instagram.com/fealtydev/"> Instagram</a></span>
+    </div>
+    </br>
+    <div>
+      > <span class="obfuscate"><a href="mailto:fealtydev">moc.liamg@vedytlaef</a></span>
+    </div>
+    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
+</div>
