add download links to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,15 +32,30 @@
     </nav>
 
     <div>
-      <span class="sidebar-nav-item">> <a href="https://trello.com/b/GmwwhEYS/production"> Roadmap</a></span>
-      <span class="sidebar-nav-item">> <a href="https://discord.gg/dKJP7bY"> Discord</a></span>
+      <div>
+        <span class="sidebar-nav-item">> <a href="https://trello.com/b/GmwwhEYS/production"> Roadmap</a></span>
+      </div>
+      <strong>Pre-Alpha 1.3 links:</strong>
+      <span class="sidebar-nav-item" style="margin-left: 20px">> <a
+          href="https://developer.cloud.unity3d.com/share/share.html?shareId=b1kxOzmgQr"> Windows</a></span>
+      <span class="sidebar-nav-item" style="margin-left: 20px">> <a
+          href="https://developer.cloud.unity3d.com/share/share.html?shareId=W1KqyYfg7H"> Android</a></span>
+      <span class="sidebar-nav-item" style="margin-left: 20px">> <a
+          href="https://developer.cloud.unity3d.com/share/share.html?shareId=b1P-mb7g7r"> iOS</a></span>
     </div>
+
     </br>
     <div>
-      <span class="sidebar-nav-item">> <a href="https://twitter.com/FealtyDev"> Twitter</a></span>
-      <span class="sidebar-nav-item">> <a href="https://www.instagram.com/fealtydev/"> Instagram</a></span>
+      Join us!
+      <span class="sidebar-nav-item">> <a href="https://discord.gg/dKJP7bY"> Discord</a></span>
     </div>
+
     </br>
+    <div>
+      Contact
+      <span class="sidebar-nav-item">> <a href="https://twitter.com/FealtyDev"> Twitter</a></span>
+      <!-- <span class="sidebar-nav-item">> <a href="https://www.instagram.com/fealtydev/"> Instagram</a></span> -->
+    </div>
     <div>
       > <span class="obfuscate"><a href="mailto:fealtydev">moc.liamg@vedytlaef</a></span>
     </div>
