update linkts to point to AppCenter and itch.io

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,20 +33,22 @@
 
     <div>
       <div>
-        <span class="sidebar-nav-item">> <a href="https://trello.com/b/GmwwhEYS/production"> Roadmap</a></span>
+        See what's coming:
+        <span class="sidebar-nav-item">> <a href="https://tinyurl.com/FealtyRoadmap"> Roadmap</a></span>
       </div>
-      <strong>Pre-Alpha 1.3 links:</strong>
+    </P>
+      <strong>Download Links:</strong>
       <span class="sidebar-nav-item" style="margin-left: 20px">> <a
-          href="https://developer.cloud.unity3d.com/share/share.html?shareId=b1kxOzmgQr"> Windows</a></span>
+          href="https://fealtydev.itch.io/fealty"> Windows (itch.io)</a></span>
       <span class="sidebar-nav-item" style="margin-left: 20px">> <a
-          href="https://developer.cloud.unity3d.com/share/share.html?shareId=W1KqyYfg7H"> Android</a></span>
+          href="https://tinyurl.com/FealtyAndroidLatest"> Android (AppCenter)</a></span>
       <span class="sidebar-nav-item" style="margin-left: 20px">> <a
-          href="https://developer.cloud.unity3d.com/share/share.html?shareId=b1P-mb7g7r"> iOS</a></span>
+          href="https://tinyurl.com/FealtyiOSLatest"> iOS (AppCenter)</a></span>
     </div>
 
     </br>
     <div>
-      Join us!
+      Join me!
       <span class="sidebar-nav-item">> <a href="https://discord.gg/dKJP7bY"> Discord</a></span>
     </div>
 
