disable download links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -38,12 +38,13 @@
       </div>
     </P>
       <strong>Download Links:</strong>
-      <span class="sidebar-nav-item" style="margin-left: 20px">> <a
+      <emphasis>Temporarily disabled - gotta fix a bug</emphasis>
+      <!-- <span class="sidebar-nav-item" style="margin-left: 20px">> <a
           href="https://fealtydev.itch.io/fealty"> Windows (itch.io)</a></span>
       <span class="sidebar-nav-item" style="margin-left: 20px">> <a
           href="https://tinyurl.com/FealtyAndroidLatest"> Android (AppCenter)</a></span>
       <span class="sidebar-nav-item" style="margin-left: 20px">> <a
-          href="https://tinyurl.com/FealtyiOSLatest"> iOS (AppCenter)</a></span>
+          href="https://tinyurl.com/FealtyiOSLatest"> iOS (AppCenter)</a></span> -->
     </div>
 
     </br>
