add the itch io widget and fix up post 4

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,10 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <a href="/{{ site.baseurl }}"><img id="logo" src="/public/images/fealty_logo.png" alt="Game logo"></a>
+        <!-- <a href="/{{ site.baseurl }}"><img id="logo" src="/public/images/fealty_logo.png" alt="Game logo"></a> -->
+        <iframe frameborder="0"
+        src="https://itch.io/embed/507146?bg_color=171720&amp;fg_color=ffffff&amp;link_color=ccbf71&amp;border_color=675531"
+        width="208" height="167"></iframe>
         </a>
       </h1>
 
@@ -30,30 +33,19 @@
       {% endif %}
       {% endfor %}
     </nav>
-
+  </p>
     <div>
       <div>
         See what's coming:
         <span class="sidebar-nav-item">> <a href="https://tinyurl.com/FealtyRoadmap"> Roadmap</a></span>
       </div>
-    </P>
-      <strong>Download Links:</strong>
-      <emphasis>Temporarily disabled - gotta fix a bug</emphasis>
-      <!-- <span class="sidebar-nav-item" style="margin-left: 20px">> <a
-          href="https://fealtydev.itch.io/fealty"> Windows (itch.io)</a></span>
-      <span class="sidebar-nav-item" style="margin-left: 20px">> <a
-          href="https://tinyurl.com/FealtyAndroidLatest"> Android (AppCenter)</a></span>
-      <span class="sidebar-nav-item" style="margin-left: 20px">> <a
-          href="https://tinyurl.com/FealtyiOSLatest"> iOS (AppCenter)</a></span> -->
     </div>
-
-    </br>
+  </p>
     <div>
-      Join me!
+      Join me:
       <span class="sidebar-nav-item">> <a href="https://discord.gg/dKJP7bY"> Discord</a></span>
     </div>
-
-    </br>
+  </p>
     <div>
       Contact
       <span class="sidebar-nav-item">> <a href="https://twitter.com/FealtyDev"> Twitter</a></span>
