remove roadmap link

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,14 +35,7 @@
     </nav>
   </p>
     <div>
-      <div>
-        See what's coming:
-        <span class="sidebar-nav-item">> <a href="https://tinyurl.com/FealtyRoadmap"> Roadmap</a></span>
-      </div>
-    </div>
-  </p>
-    <div>
-      Join me:
+      Join us:
       <span class="sidebar-nav-item">> <a href="https://discord.gg/dKJP7bY"> Discord</a></span>
     </div>
   </p>
