add get the game link

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,6 +35,12 @@
     </nav>
   </p>
     <div>
+      <div>        
+        <span class="sidebar-nav-item">> <a href="https://fealtydev.itch.io/fealty"> Get the game</a></span>
+      </div>
+    </div>
+  </p>
+    <div>
       Join us:
       <span class="sidebar-nav-item">> <a href="https://discord.gg/dKJP7bY"> Discord</a></span>
     </div>
