--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,6 +28,7 @@
       {% if node.title != null %}
       {% if node.layout == "page" %}
       <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
+        href="/{{ site.baseurl }}{{ node.url  | remove_first: '/' }}">>{{ node.title }}</a>
       {% endif %}
       {% endif %}
       {% endfor %}
