--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,11 +2,11 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <!-- <a href="/{{ site.baseurl }}"><img id="logo" src="/public/images/fealty_logo.png" alt="Game logo"></a> -->
-        <iframe frameborder="0"
-        src="https://itch.io/embed/507146?bg_color=171720&amp;fg_color=ffffff&amp;link_color=ccbf71&amp;border_color=675531"
-        width="208" height="167"></iframe>
-        </a>
+        <a href="/{{ site.baseurl }}"><img id="logo" src="/public/images/fealty_logo.png" alt="Game logo"></a>
+        <!-- <iframe frameborder="0"
+          src="https://itch.io/embed/507146?bg_color=171720&amp;fg_color=ffffff&amp;link_color=ccbf71&amp;border_color=675531"
+          width="208" height="167"></iframe>
+        </a> -->
       </h1>
 
       <p class="lead">{{ site.description }}</p>
@@ -25,25 +25,25 @@
 
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
-      {% if node.title != null %}
-      {% if node.layout == "page" %}
-      <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
-        href="/{{ site.baseurl }}{{ node.url  | remove_first: '/' }}">>{{ node.title }}</a>
-      {% endif %}
-      {% endif %}
+        {% if node.title != null %}
+          {% if node.layout == "page" %}
+            <span class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}">>
+            <a href="/{{ site.baseurl }}{{ node.url  | remove_first: '/' }}">{{ node.title }}</a>
+          {% endif %}
+        {% endif %}
       {% endfor %}
     </nav>
-  </p>
+    </p>
     <div>
-      <div>        
+      <div>
         <span class="sidebar-nav-item">> <a href="https://fealtydev.itch.io/fealty"> Get the game</a></span>
       </div>
     </div>
-  </p>
-    <div>     
+    </p>
+    <div>
       <span class="sidebar-nav-item">> <a href="https://discord.gg/dKJP7bY"> Discord</a></span>
     </div>
-  </p>
+    </p>
     <div>
       <span class="sidebar-nav-item">> <a href="https://twitter.com/FealtyDev"> Twitter</a></span>
       <!-- <span class="sidebar-nav-item">> <a href="https://www.instagram.com/fealtydev/"> Instagram</a></span> -->
