--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,6 +10,7 @@
       </h1>
 
       <p class="lead">{{ site.description }}</p>
+      <img src="{{ site.baseurl }}/public/images/fealty-hr.png" class="center" />
     </div>
     <!-- <div id="pledgelink">
       <a href="http://eepurl.com/go8jWf">
@@ -34,11 +35,12 @@
       {% endfor %}
     </nav>
     </p>
-    <div>
+    <img src="{{ site.baseurl }}/public/images/fealty-hr.png" class="center" />
+    <!-- <div>
       <div>
         <span class="sidebar-nav-item">> <a href="https://fealtydev.itch.io/fealty"> Get the game</a></span>
       </div>
-    </div>
+    </div> -->
     <div>
       <span class="sidebar-nav-item">> <a href="https://discord.gg/dKJP7bY"> Discord</a></span>
     </div>
